Update likelylocales to UCD 13/CLDR 37

--- a/js/data/locale/localematch.json
+++ b/js/data/locale/localematch.json
@@ -156,6 +156,7 @@
         "Cari": "xcr-Cari-TR",
         "Cham": "cjm-Cham-VN",
         "Cher": "chr-Cher-US",
+        "Chrs": "xco-Chrs-UZ",
         "Copt": "cop-Copt-EG",
         "Cprt": "grc-Cprt-CY",
         "Cyrl": "ru-Cyrl-RU",
@@ -194,6 +195,7 @@
         "Deva-MU": "bho-Deva-MU",
         "Deva-NP": "ne-Deva-NP",
         "Deva-PK": "btv-Deva-PK",
+        "Diak": "dv-Diak-MV",
         "Dogr": "doi-Dogr-IN",
         "Dogr-IN": "doi-Dogr-IN",
         "Dsrt": "en-Dsrt-US",
@@ -324,6 +326,7 @@
         "Khmr-MM": "my-Khmr-MM",
         "Khmr-MV": "bh-Khmr-MV",
         "Khoj": "sd-Khoj-IN",
+        "Kits": "zkt-Kits-CN",
         "Knda": "kn-Knda-IN",
         "Kore": "ko-Kore-KR",
         "Kore-KP": "ko-Kore-KP",
@@ -770,6 +773,7 @@
         "Xsux": "akk-Xsux-IQ",
         "YE": "ar-Arab-YE",
         "YT": "fr-Latn-YT",
+        "Yezi": "ku-Yezi-GE",
         "Yiii": "ii-Yiii-CN",
         "ZA": "en-Latn-ZA",
         "ZM": "en-Latn-ZM",
@@ -1452,6 +1456,9 @@
         "ca-AD": "ca-Latn-AD",
         "ca-ES": "ca-Latn-ES",
         "ca-Latn": "ca-Latn-ES",
+        "cad": "cad-Latn-US",
+        "cad-Latn": "cad-Latn-US",
+        "cad-US": "cad-Latn-US",
         "can": "can-Latn-ZZ",
         "can-Latn": "can-Latn-ZZ",
         "can-ZZ": "can-Latn-ZZ",
@@ -2333,6 +2340,7 @@
         "hi": "hi-Deva-IN",
         "hi-Deva": "hi-Deva-IN",
         "hi-IN": "hi-Deva-IN",
+        "hi-Latn": "hi-Latn-IN",
         "hia": "hia-Latn-ZZ",
         "hia-Latn": "hia-Latn-ZZ",
         "hia-ZZ": "hia-Latn-ZZ",
@@ -2860,6 +2868,7 @@
         "kru-IN": "kru-Deva-IN",
         "ks": "ks-Arab-IN",
         "ks-Arab": "ks-Arab-IN",
+        "ks-Deva": "ks-Deva-IN",
         "ks-IN": "ks-Arab-IN",
         "ksb": "ksb-Latn-TZ",
         "ksb-Latn": "ksb-Latn-TZ",
@@ -2896,6 +2905,7 @@
         "ku-LB": "ku-Arab-LB",
         "ku-Latn": "ku-Latn-TR",
         "ku-TR": "ku-Latn-TR",
+        "ku-Yezi": "ku-Yezi-GE",
         "kub": "kub-Latn-ZZ",
         "kub-Latn": "kub-Latn-ZZ",
         "kub-ZZ": "kub-Latn-ZZ",
@@ -3431,7 +3441,7 @@
         "ms": "ms-Latn-MY",
         "ms-BN": "ms-Latn-BN",
         "ms-CC": "ms-Arab-CC",
-        "ms-ID": "ms-Arab-ID",
+        "ms-ID": "ms-Latn-ID",
         "ms-Latn": "ms-Latn-MY",
         "ms-MY": "ms-Latn-MY",
         "ms-SG": "ms-Latn-SG",
@@ -4080,9 +4090,9 @@
         "sas": "sas-Latn-ID",
         "sas-ID": "sas-Latn-ID",
         "sas-Latn": "sas-Latn-ID",
-        "sat": "sat-Latn-IN",
-        "sat-IN": "sat-Latn-IN",
-        "sat-Latn": "sat-Latn-IN",
+        "sat": "sat-Olck-IN",
+        "sat-IN": "sat-Olck-IN",
+        "sat-Olck": "sat-Olck-IN",
         "sav": "sav-Latn-SN",
         "sav-Latn": "sav-Latn-SN",
         "sav-SN": "sav-Latn-SN",
@@ -4821,6 +4831,7 @@
         "und-Cari": "xcr-Cari-TR",
         "und-Cham": "cjm-Cham-VN",
         "und-Cher": "chr-Cher-US",
+        "und-Chrs": "xco-Chrs-UZ",
         "und-Copt": "cop-Copt-EG",
         "und-Cprt": "grc-Cprt-CY",
         "und-Cyrl": "ru-Cyrl-RU",
@@ -4845,6 +4856,7 @@
         "und-Deva-FJ": "hif-Deva-FJ",
         "und-Deva-MU": "bho-Deva-MU",
         "und-Deva-PK": "btv-Deva-PK",
+        "und-Diak": "dv-Diak-MV",
         "und-Dogr": "doi-Dogr-IN",
         "und-Dupl": "fr-Dupl-FR",
         "und-EA": "es-Latn-EA",
@@ -4955,6 +4967,7 @@
         "und-Khar": "pra-Khar-PK",
         "und-Khmr": "km-Khmr-KH",
         "und-Khoj": "sd-Khoj-IN",
+        "und-Kits": "zkt-Kits-CN",
         "und-Knda": "kn-Knda-IN",
         "und-Kore": "ko-Kore-KR",
         "und-Kthi": "bho-Kthi-IN",
@@ -5192,6 +5205,7 @@
         "und-Xsux": "akk-Xsux-IQ",
         "und-YE": "ar-Arab-YE",
         "und-YT": "fr-Latn-YT",
+        "und-Yezi": "ku-Yezi-GE",
         "und-Yiii": "ii-Yiii-CN",
         "und-ZA": "en-Latn-ZA",
         "und-ZM": "en-Latn-ZM",
@@ -5395,6 +5409,9 @@
         "xbi": "xbi-Latn-ZZ",
         "xbi-Latn": "xbi-Latn-ZZ",
         "xbi-ZZ": "xbi-Latn-ZZ",
+        "xco": "xco-Chrs-UZ",
+        "xco-Chrs": "xco-Chrs-UZ",
+        "xco-UZ": "xco-Chrs-UZ",
         "xcr": "xcr-Cari-TR",
         "xcr-Cari": "xcr-Cari-TR",
         "xcr-TR": "xcr-Cari-TR",
@@ -5593,6 +5610,9 @@
         "zia": "zia-Latn-ZZ",
         "zia-Latn": "zia-Latn-ZZ",
         "zia-ZZ": "zia-Latn-ZZ",
+        "zkt": "zkt-Kits-CN",
+        "zkt-CN": "zkt-Kits-CN",
+        "zkt-Kits": "zkt-Kits-CN",
         "zlm": "zlm-Latn-TG",
         "zlm-Latn": "zlm-Latn-TG",
         "zlm-TG": "zlm-Latn-TG",
@@ -5981,7 +6001,6 @@
             "ES",
             "FI",
             "FR",
-            "GB",
             "GR",
             "HR",
             "HU",
@@ -6888,7 +6907,6 @@
         ],
         "GB": [
             "001",
-            "EU",
             "UN",
             "150",
             "154"
