--- a/js/data/locale/ceb/list.json
+++ b/js/data/locale/ceb/list.json
@@ -5,12 +5,12 @@
             "end": "{0}, ug {1}"
         },
         "long": {
-            "2": "{0} at {1}",
-            "end": "{0}, at {1}"
+            "2": "{0} ug {1}",
+            "end": "{0}, ug {1}"
         },
         "full": {
-            "2": "{0} at {1}",
-            "end": "{0}, at {1}"
+            "2": "{0} ug {1}",
+            "end": "{0}, ug {1}"
         }
     },
     "or": {
