Manual fixes regarding list and unitfmt locale data

--- a/js/data/locale/mt/list.json
+++ b/js/data/locale/mt/list.json
@@ -17,6 +17,20 @@
             "end": "{0}, u {1}"
         }
     },
+    "or": {
+        "medium": {
+            "2": "{0} jew {1}",
+            "end": "{0}, jew {1}"
+        },
+        "long": {
+            "2": "{0} jew {1}",
+            "end": "{0}, jew {1}"
+        },
+        "full": {
+            "2": "{0} jew {1}",
+            "end": "{0}, jew {1}"
+        }
+    },
     "unit": {
         "medium": {
             "2": "{0} u {1}",
