--- a/js/data/locale/mt/unitfmt.json
+++ b/js/data/locale/mt/unitfmt.json
@@ -8,10 +8,10 @@
             "degree": "#{n}°",
             "arc-minute": "#{n}′",
             "arc-second": "#{n}″",
-            "square-kilometer": "#{n} km²",
+            "square-kilometer": "#{n} kilometru kwadru",
             "hectare": "#{n} ha",
             "square-meter": "#{n} m²",
-            "square-centimeter": "#{n} cm²",
+            "square-centimeter": "#{n} square centimeter",
             "square-mile": "#{n} mi²",
             "acre": "#{n} ac",
             "square-yard": "#{n} yd²",
@@ -62,7 +62,7 @@
             "foodcalorie": "#{n} Cal",
             "kilojoule": "#{n} kJ",
             "joule": "#{n} J",
-            "kilowatt-hour": "#{n} kWh",
+            "kilowatt-hour": "#{n} kilowatt-siegħa",
             "electronvolt": "#{n} eV",
             "british-thermal-unit": "#{n} Btu",
             "therm-us": "#{n} US therm",
@@ -79,7 +79,7 @@
             "pixel-per-inch": "#{n} ppi",
             "dot-per-centimeter": "#{n} dpcm",
             "dot-per-inch": "#{n} dpi",
-            "kilometer": "#{n} km",
+            "kilometer": "#{n} kilometru",
             "meter": "#{n} m",
             "decimeter": "#{n} dm",
             "centimeter": "#{n} cm",
@@ -138,7 +138,7 @@
             "mile-per-hour": "#{n} mi/h",
             "knot": "#{n} kn",
             "generic": "#{n}°",
-            "celsius": "#{n}°C",
+            "celsius": "#{n} grad Celsius",
             "fahrenheit": "#{n}°F",
             "kelvin": "#{n} K",
             "pound-force-foot": "#{n} lbf⋅ft",
@@ -152,7 +152,7 @@
             "cubic-inch": "#{n} in³",
             "megaliter": "#{n} ML",
             "hectoliter": "#{n} hL",
-            "liter": "#{n} l",
+            "liter": "#{n} litru",
             "deciliter": "#{n} dL",
             "centiliter": "#{n} cL",
             "milliliter": "#{n} mL",
@@ -174,7 +174,7 @@
             "foot-per-second": "#{n} ft/s",
             "kilometer-per-second": "#{n} km/s",
             "mile-per-second": "#{n} mi/s",
-            "kilometer-per-liter": "#{n} km/l",
+            "kilometer-per-liter": "#{n} kilometru kull litru",
             "bit-per-second": "#{n} bit/s",
             "kilobit-per-second": "#{n} kb/s",
             "megabit-per-second": "#{n} Mb/s",
