Manual update locale data which doesn't prvode from cldr(list.json, sysres.json, unitfmt.json

--- a/js/data/locale/tg/sysres.json
+++ b/js/data/locale/tg/sysres.json
@@ -79,14 +79,14 @@
     "a1": "PM",
     "G-1": "BCE",
     "G1": "CE",
-    "1#1 millisecond|#{num} milliseconds": "#{num} ms",
-    "1#1 second|#{num} seconds": "#{num} s",
-    "1#1 minute|#{num} minutes": "#{num} min",
-    "1#1 hour|#{num} hours": "#{num} h",
-    "1#1 day|#{num} days": "#{num} d",
-    "1#1 week|#{num} weeks": "#{num} w",
-    "1#1 month|#{num} months": "#{num} m",
-    "1#1 year|#{num} years": "#{num} y",
+    "1#1 millisecond|#{num} milliseconds": "#{num} миллисекундҳо",
+    "1#1 second|#{num} seconds": "#{num} сония",
+    "1#1 minute|#{num} minutes": "#{num} дақиқа",
+    "1#1 hour|#{num} hours": "#{num} соат",
+    "1#1 day|#{num} days": "#{num} рӯз",
+    "1#1 week|#{num} weeks": "#{num} ҳафта",
+    "1#1 month|#{num} months": "#{num} моҳ",
+    "1#1 year|#{num} years": "#{num} сол",
     "#{num} ms": "#{num} ms",
     "1#1 sec|#{num} sec": "#{num} s",
     "1#1 min|#{num} min": "#{num} min",
