More locale data update and fix tcs

--- a/js/data/locale/mt/sysres.json
+++ b/js/data/locale/mt/sysres.json
@@ -155,14 +155,14 @@
     "a1": "PM",
     "G-1": "QEK",
     "G1": "EK",
-    "1#1 millisecond|#{num} milliseconds": "one#{num} millisekonda|few#{num} millisekondi|many#{num} millisekondi|#{num} millisekondi",
-    "1#1 second|#{num} seconds": "#{num} s",
-    "1#1 minute|#{num} minutes": "#{num} min",
-    "1#1 hour|#{num} hours": "#{num} h",
-    "1#1 day|#{num} days": "#{num} d",
-    "1#1 week|#{num} weeks": "#{num} w",
-    "1#1 month|#{num} months": "#{num} m",
-    "1#1 year|#{num} years": "#{num} y",
+    "1#1 millisecond|#{num} milliseconds": "one#{num} millisekonda|few#{num} milliseconds|many#{num}-il millisekonda|#{num} millisekonda",
+    "1#1 second|#{num} seconds": "one#{num} sekonda|few#{num} sekondi|many#{num}-il sekonda|#{num} sekonda",
+    "1#1 minute|#{num} minutes": "one#{num} minuta|few#{num} minuti|many#{num}-il minuta|#{num} minuta",
+    "1#1 hour|#{num} hours": "one#{num} siegħa|few#{num} sigħat|many#{num}-il siegħa|#{num} siegħa",
+    "1#1 day|#{num} days": "one#{num} jum|few#{num} ijiem|many#{num}-il jum|#{num} jum",
+    "1#1 week|#{num} weeks": "one#Ġimgħa|few#{num} ġimgħat|many#{num}-il ġimgħa|#{num} ġimgħa",
+    "1#1 month|#{num} months": "one#Xahar|few#{num} minuti|many#{num} xhur|#{num} xahar",
+    "1#1 year|#{num} years": "one#Sena|few#{num} snin|many#{num}-il sena|#{num} sena",
     "#{num} ms": "one#{num} ms|few#{num} ms|many#{num} ms|#{num} ms",
     "1#1 sec|#{num} sec": "#{num} s",
     "1#1 min|#{num} min": "#{num} min",
