--- a/js/data/locale/mt/list.json
+++ b/js/data/locale/mt/list.json
@@ -17,20 +17,6 @@
             "end": "{0}, u {1}"
         }
     },
-    "or": {
-        "medium": {
-            "2": "{0} jew {1}",
-            "end": "{0}, jew {1}"
-        },
-        "long": {
-            "2": "{0} jew {1}",
-            "end": "{0}, jew {1}"
-        },
-        "full": {
-            "2": "{0} jew {1}",
-            "end": "{0}, jew {1}"
-        }
-    },
     "unit": {
         "medium": {
             "2": "{0} u {1}",
@@ -43,6 +29,24 @@
         "full": {
             "2": "{0} u {1}",
             "end": "{0}, u {1}"
+        }
+    },
+    "or": {
+        "short": {
+            "2": "{0} jew {1}",
+            "end": "{0}, jew {1}"
+        },
+        "medium": {
+            "2": "{0} jew {1}",
+            "end": "{0}, jew {1}"
+        },
+        "long": {
+            "2": "{0} jew {1}",
+            "end": "{0}, jew {1}"
+        },
+        "full": {
+            "2": "{0} jew {1}",
+            "end": "{0}, jew {1}"
         }
     }
 }
