Update locale data and fix some tcs

--- a/js/data/locale/tg/list.json
+++ b/js/data/locale/tg/list.json
@@ -1,5 +1,9 @@
 {
     "or": {
+        "short": {
+            "2": "{0} ё {1}",
+            "end": "{0}, ё {1}"
+        },
         "medium": {
             "2": "{0} ё {1}",
             "end": "{0}, ё {1}"
