--- a/js/data/locale/tg/unitfmt.json
+++ b/js/data/locale/tg/unitfmt.json
@@ -3,96 +3,96 @@
         "long": {
             "g-force": "#{n} G",
             "meter-per-square-second": "#{n} m/s²",
-            "revolution": "#{n} rev",
-            "radian": "#{n} rad",
-            "degree": "#{n}°",
+            "revolution": "#{n} инқилоб",
+            "radian": "#{n} радиан",
+            "degree": "#{n} дараҷа",
             "arc-minute": "#{n}′",
             "arc-second": "#{n}″",
             "square-kilometer": "#{n} километри мураббаъ",
-            "hectare": "#{n} ha",
-            "square-meter": "#{n} m²",
+            "hectare": "#{n} гектар",
+            "square-meter": "#{n} метри мураббаъ",
             "square-centimeter": "#{n} сантиметр мураббаъ",
-            "square-mile": "#{n} mi²",
-            "acre": "#{n} ac",
-            "square-yard": "#{n} yd²",
-            "square-foot": "#{n} ft²",
-            "square-inch": "#{n} in²",
-            "dunam": "#{n} dunam",
-            "karat": "#{n} kt",
+            "square-mile": "#{n} мураббаъ-мил",
+            "acre": "#{n} хектор",
+            "square-yard": "#{n} метри мураббаъ",
+            "square-foot": "#{n} метри мураббаъ",
+            "square-inch": "#{n} дюйм мураббаъ",
+            "dunam": "#{n} дунам",
+            "karat": "#{n} карат",
             "milligram-per-deciliter": "#{n} mg/dL",
             "millimole-per-liter": "#{n} mmol/L",
             "permillion": "#{n} ppm",
-            "percent": "#{n}%",
-            "permille": "#{n}‰",
-            "permyriad": "#{n}‱",
-            "mole": "#{n} mol",
+            "percent": "#{n} фоиз",
+            "permille": "#{n} пермила",
+            "permyriad": "#{n} permyriad",
+            "mole": "#{n} мол",
             "liter-per-kilometer": "#{n} L/km",
             "liter-per-100-kilometer": "#{n} L/100km",
             "mile-per-gallon": "#{n} mpg US",
             "mile-per-gallon-imperial": "#{n} mpg Imp.",
-            "petabyte": "#{n} PB",
-            "terabyte": "#{n} TB",
-            "terabit": "#{n} Tb",
-            "gigabyte": "#{n} GB",
-            "gigabit": "#{n} Gb",
-            "megabyte": "#{n} MB",
-            "megabit": "#{n} Mb",
-            "kilobyte": "#{n} kB",
-            "kilobit": "#{n} kb",
-            "byte": "#{n} byte",
-            "bit": "#{n} bit",
-            "century": "#{n} c",
-            "decade": "#{n} dec",
-            "year": "#{n} y",
-            "month": "#{n} m",
-            "week": "#{n} w",
-            "day": "#{n} d",
-            "hour": "#{n} h",
-            "minute": "#{n} min",
-            "second": "#{n} s",
-            "millisecond": "#{n} ms",
-            "microsecond": "#{n} µs",
-            "nanosecond": "#{n} ns",
-            "ampere": "#{n} A",
-            "milliampere": "#{n} mA",
+            "petabyte": "#{n} петабайт",
+            "terabyte": "#{n} терабайт",
+            "terabit": "#{n} терабит",
+            "gigabyte": "#{n} гигабайт",
+            "gigabit": "#{n} гигабит",
+            "megabyte": "#{n} мегабайт",
+            "megabit": "#{n} мегабит",
+            "kilobyte": "#{n} килобайт",
+            "kilobit": "#{n} килобит",
+            "byte": "#{n} байт",
+            "bit": "#{n} каме",
+            "century": "#{n} аср",
+            "decade": "#{n} даҳсолаҳо",
+            "year": "#{n} сол",
+            "month": "#{n} сол",
+            "week": "#{n} ҳафта",
+            "day": "#{n} рӯз",
+            "hour": "#{n} соат",
+            "minute": "#{n} дақиқа",
+            "second": "#{n} сония",
+            "millisecond": "#{n} миллисекунд",
+            "microsecond": "#{n} микросекунд",
+            "nanosecond": "#{n} наносекундӣ",
+            "ampere": "#{n} ампер",
+            "milliampere": "#{n} миллиампер",
             "ohm": "#{n} Ω",
             "volt": "#{n} V",
-            "kilocalorie": "#{n} kcal",
-            "calorie": "#{n} cal",
-            "foodcalorie": "#{n} Cal",
-            "kilojoule": "#{n} kJ",
-            "joule": "#{n} J",
+            "kilocalorie": "#{n} килокалория",
+            "calorie": "#{n} калория",
+            "foodcalorie": "#{n} калорияҳои хӯрокворӣ",
+            "kilojoule": "#{n} киложоул",
+            "joule": "#{n} ҷоул",
             "kilowatt-hour": "#{n} киловатт-соат",
             "electronvolt": "#{n} eV",
-            "british-thermal-unit": "#{n} Btu",
-            "therm-us": "#{n} US therm",
+            "british-thermal-unit": "#{n} воҳиди англисӣ-термикӣ",
+            "therm-us": "#{n} ҳарорат-мо",
             "pound-force": "#{n} lbf",
-            "newton": "#{n} N",
-            "gigahertz": "#{n} GHz",
-            "megahertz": "#{n} MHz",
-            "kilohertz": "#{n} kHz",
-            "hertz": "#{n} Hz",
+            "newton": "#{n} Нютон",
+            "gigahertz": "#{n} гигагерт",
+            "megahertz": "#{n} мегагерт",
+            "kilohertz": "#{n} килогерц",
+            "hertz": "#{n} герц",
             "em": "#{n} em",
-            "pixel": "#{n} px",
-            "megapixel": "#{n} MP",
-            "pixel-per-centimeter": "#{n} ppcm",
-            "pixel-per-inch": "#{n} ppi",
-            "dot-per-centimeter": "#{n} dpcm",
-            "dot-per-inch": "#{n} dpi",
+            "pixel": "#{n} пиксел",
+            "megapixel": "#{n} мегапикселӣ",
+            "pixel-per-centimeter": "#{n} пиксел барои як сантиметр",
+            "pixel-per-inch": "#{n} пиксел дар як дюйм",
+            "dot-per-centimeter": "#{n} нуқта барои як сантиметр",
+            "dot-per-inch": "#{n} нуқта барои як дюйм",
             "megameter": "#{n} мегаметри",
             "kilometer": "#{n} километр",
-            "meter": "#{n} m",
-            "decimeter": "#{n} dm",
-            "centimeter": "#{n} cm",
-            "millimeter": "#{n} mm",
-            "micrometer": "#{n} µm",
-            "nanometer": "#{n} nm",
-            "picometer": "#{n} pm",
-            "mile": "#{n} mi",
-            "yard": "#{n} yd",
-            "foot": "#{n} ft",
-            "inch": "#{n} in",
-            "parsec": "#{n} pc",
+            "meter": "#{n} метр",
+            "decimeter": "#{n} дециметр",
+            "centimeter": "#{n} сантиметр",
+            "millimeter": "#{n} миллиметр",
+            "micrometer": "#{n} микрометр",
+            "nanometer": "#{n} нанометр",
+            "picometer": "#{n} пикометр",
+            "mile": "#{n} мил",
+            "yard": "#{n} ҳавлӣ",
+            "foot": "#{n} фут",
+            "inch": "#{n} дюйм",
+            "parsec": "#{n} парсек",
             "light-year": "#{n} ly",
             "astronomical-unit": "#{n} au",
             "furlong": "#{n} fur",
@@ -104,24 +104,24 @@
             "lux": "#{n} lx",
             "solar-luminosity": "#{n} L☉",
             "metric-ton": "#{n} t",
-            "kilogram": "#{n} kg",
-            "gram": "#{n} g",
-            "milligram": "#{n} mg",
-            "microgram": "#{n} µg",
-            "ton": "#{n} tn",
-            "short-ton": "#{n} tn",
+            "kilogram": "#{n} кило",
+            "gram": "#{n} грамм",
+            "milligram": "#{n} миллиграмм",
+            "microgram": "#{n} микрограмм",
+            "ton": "#{n} тонна",
+            "short-ton": "#{n} оҳанги кӯтоҳ",
             "stone": "#{n} st",
             "pound": "#{n} lb",
             "ounce": "#{n} oz",
             "ounce-troy": "#{n} oz t",
-            "carat": "#{n} CD",
-            "dalton": "#{n} Da",
+            "carat": "#{n} карат",
+            "dalton": "#{n} далтон",
             "earth-mass": "#{n} M⊕",
             "solar-mass": "#{n} M☉",
-            "gigawatt": "#{n} GW",
-            "megawatt": "#{n} MW",
-            "kilowatt": "#{n} kW",
-            "watt": "#{n} W",
+            "gigawatt": "#{n} гигаватт",
+            "megawatt": "#{n} мегаватт",
+            "kilowatt": "#{n} киловатт",
+            "watt": "#{n} ватт",
             "milliwatt": "#{n} mW",
             "horsepower": "#{n} hp",
             "millimeter-ofhg": "#{n} mm Hg",
@@ -130,18 +130,18 @@
             "bar": "#{n} bar",
             "millibar": "#{n} mbar",
             "atmosphere": "#{n} atm",
-            "pascal": "#{n} Pa",
-            "hectopascal": "#{n} hPa",
-            "kilopascal": "#{n} kPa",
-            "megapascal": "#{n} MPa",
+            "pascal": "#{n} паскал",
+            "hectopascal": "#{n} гектопаскал",
+            "kilopascal": "#{n} килопаскал",
+            "megapascal": "#{n} мегапаскал",
             "kilometer-per-hour": "#{n} km/h",
             "meter-per-second": "#{n} m/s",
             "mile-per-hour": "#{n} mi/h",
             "knot": "#{n} kn",
             "generic": "#{n}°",
             "celsius": "#{n} Сельсий",
-            "fahrenheit": "#{n}°F",
-            "kelvin": "#{n} K",
+            "fahrenheit": "#{n} фаренгейт",
+            "kelvin": "#{n} Келвин",
             "pound-force-foot": "#{n} lbf⋅ft",
             "newton-meter": "#{n} N⋅m",
             "cubic-kilometer": "#{n} km³",
@@ -151,46 +151,46 @@
             "cubic-yard": "#{n} yd³",
             "cubic-foot": "#{n} ft³",
             "cubic-inch": "#{n} in³",
-            "megaliter": "#{n} ML",
-            "hectoliter": "#{n} hL",
+            "megaliter": "#{n} мегалиттер",
+            "hectoliter": "#{n} гектолит",
             "liter": "#{n} литр",
-            "deciliter": "#{n} dL",
-            "centiliter": "#{n} cL",
-            "milliliter": "#{n} mL",
+            "deciliter": "#{n} декалитр",
+            "centiliter": "#{n} сантиметр",
+            "milliliter": "#{n} миллилитр",
             "pint-metric": "#{n} mpt",
             "cup-metric": "#{n} mc",
             "acre-foot": "#{n} ac ft",
             "bushel": "#{n} bu",
-            "gallon": "#{n} gal US",
-            "gallon-imperial": "#{n} gal Imp.",
+            "gallon": "#{n} галлон",
+            "gallon-imperial": "#{n} галлон-империалистӣ",
             "quart": "#{n} qt",
             "pint": "#{n} pt",
             "cup": "#{n} c",
-            "fluid-ounce": "#{n} fl oz US",
-            "fluid-ounce-imperial": "#{n} fl oz Imp.",
+            "fluid-ounce": "#{n} унси моеъ",
+            "fluid-ounce-imperial": "#{n} моеъ-унсия-империалистӣ",
             "tablespoon": "#{n} tbsp",
             "teaspoon": "#{n} tsp",
             "barrel": "#{n} bbl",
             "coordinateUnit": "",
-            "foot-per-second": "#{n} ft/s",
-            "kilometer-per-second": "#{n} km/s",
-            "mile-per-second": "#{n} mi/s",
+            "foot-per-second": "#{n} пой дар як сония",
+            "kilometer-per-second": "#{n} километр дар як сония",
+            "mile-per-second": "#{n} мил дар як сония",
             "kilometer-per-liter": "#{n} километри як литр",
-            "bit-per-second": "#{n} bit/s",
-            "kilobit-per-second": "#{n} kb/s",
-            "megabit-per-second": "#{n} Mb/s",
-            "gigabit-per-second": "#{n} Gb/s",
-            "terabit-per-second": "#{n} Tb/s",
-            "byte-per-second": "#{n} byte/s",
-            "kilobyte-per-second": "#{n} kB/s",
-            "megabyte-per-second": "#{n} MB/s",
-            "gigabyte-per-second": "#{n} GB/s",
-            "terabyte-per-second": "#{n} TB/s",
-            "byte-per-hour": "#{n} byte/h",
-            "kilobyte-per-hour": "#{n} kB/h",
-            "megabyte-per-hour": "#{n} MB/h",
-            "gigabyte-per-hour": "#{n} GB/h",
-            "terabyte-per-hour": "#{n} TB/h"
+            "bit-per-second": "#{n} бит дар як сония",
+            "kilobit-per-second": "#{n} килобит-дар як сония",
+            "megabit-per-second": "#{n} мегабит дар як сония",
+            "gigabit-per-second": "#{n} гигабит дар як сония",
+            "terabit-per-second": "#{n} терабит дар як сония",
+            "byte-per-second": "#{n} байт дар як сония",
+            "kilobyte-per-second": "#{n} килобайт дар як сония",
+            "megabyte-per-second": "#{n} мегабайт дар як сония",
+            "gigabyte-per-second": "#{n} гигабайт дар як сония",
+            "terabyte-per-second": "#{n} терабайт-дар як сония",
+            "byte-per-hour": "#{n} байт дар як соат",
+            "kilobyte-per-hour": "#{n} килобайт-дар як соат",
+            "megabyte-per-hour": "#{n} мегабайт дар як соат",
+            "gigabyte-per-hour": "#{n} гигабайт дар як соат",
+            "terabyte-per-hour": "#{n} терабайт-дар як соат"
         },
         "short": {
             "g-force": "#{n} G",
