Add more tcs for zu-ZA and fix some locale data

--- a/js/data/locale/zu/list.json
+++ b/js/data/locale/zu/list.json
@@ -17,5 +17,23 @@
         "short": {
             "end": "{0} {1}"
         }
+    },
+    "or": {
+        "short": {
+            "2": "{0} noma {1}",
+            "end": "{0}, noma {1}"
+        },
+        "medium": {
+            "2": "{0} noma {1}",
+            "end": "{0}, noma {1}"
+        },
+        "long": {
+            "2": "{0} noma {1}",
+            "end": "{0}, noma {1}"
+        },
+        "full": {
+            "2": "{0} noma {1}",
+            "end": "{0}, noma {1}"
+        }
     }
 }
