--- a/js/data/locale/zu/unitfmt.json
+++ b/js/data/locale/zu/unitfmt.json
@@ -8,10 +8,10 @@
             "degree": "#{n}°",
             "arc-minute": "one#{n} arcminute|#{n} arcminutes",
             "arc-second": "one#{n} arcsecond|#{n} arcseconds",
-            "square-kilometer": "#{n} km²",
+            "square-kilometer": "one#{n} isikwele-khilomitha|#amakhilomitha-skwele ayi-{n}",
             "hectare": "#{n} ha",
-            "square-meter": "#{n} m²",
-            "square-centimeter": "#{n} cm²",
+            "square-meter": "one#imitha-skwele eli-{n}|#{n} imitha-skwele",
+            "square-centimeter": "one#isentimitha eli-{n}|#amasentimitha ayi-{n} ayisikwele",
             "square-mile": "#{n} mi²",
             "acre": "#{n} ac",
             "square-yard": "#{n} yd²",
@@ -62,7 +62,7 @@
             "foodcalorie": "one#{n} Calorie|#{n} Calories",
             "kilojoule": "#{n} kJ",
             "joule": "one#{n} i-joule|#{n} J",
-            "kilowatt-hour": "#{n} kWh",
+            "kilowatt-hour":  "one#{n} kilowatt-hour|#{n} kilowatt-amahora",
             "electronvolt": "#{n} eV",
             "british-thermal-unit": "#{n} Btu",
             "therm-us": "#{n} US therm",
@@ -79,8 +79,8 @@
             "pixel-per-inch": "#{n} ppi",
             "dot-per-centimeter": "#{n} dpcm",
             "dot-per-inch": "#{n} dpi",
-            "kilometer": "#{n} km",
-            "meter": "#{n} m",
+            "kilometer": "one#ikhilomitha eli-{n}|#amakhilomitha ayi-{n}",
+            "meter": "one#imitha eli-{n}|#{n} amamitha",
             "decimeter": "#{n} dm",
             "centimeter": "#{n} cm",
             "millimeter": "#{n} mm",
@@ -152,7 +152,7 @@
             "cubic-inch": "#{n} in³",
             "megaliter": "#{n} ML",
             "hectoliter": "#{n} hL",
-            "liter": "#{n} l",
+            "liter": "one#{n} litre|#{n} amalitha",
             "deciliter": "#{n} dL",
             "centiliter": "#{n} cL",
             "milliliter": "#{n} mL",
@@ -174,7 +174,7 @@
             "foot-per-second": "#{n} ftps",
             "kilometer-per-second": "#{n} kmps",
             "mile-per-second": "#{n} mips",
-            "kilometer-per-liter": "#{n} km/l",
+            "kilometer-per-liter": "one#amakhilomitha ayi-{n} ngelitha|#amakhilomitha ayi-{n} ngamalitha",
             "bit-per-second": "#{n} ama-bitsps",
             "kilobit-per-second": "#{n} ama-kilobitsps",
             "megabit-per-second": "#{n} megabitsps",
