Add in some unit tests for usages
- not working yet

--- a/js/data/locale/unitfmt.json
+++ b/js/data/locale/unitfmt.json
@@ -938,6 +938,36 @@
                 ]
             },
             "maxFractionDigits": 3
+        },
+        "gasPressure": {
+            "description": "pressure of a gas",
+            "type": "pressure",
+            "units": {
+                "metric": ["pascal"],
+                "uscustomary": ["pound-per-square-inch"],
+                "imperial": ["pound-per-square-inch"]
+            },
+            "maxFractionDigits": 3
+        },
+        "atmosphericPressure": {
+            "description": "pressure of the atmosphere used in weather reports",
+            "type": "pressure",
+            "units": {
+                "metric": ["millibar", "hectopascal"],
+                "uscustomary": ["atmosphere"],
+                "imperial": ["atmosphere"]
+            },
+            "maxFractionDigits": 2
+        },
+        "vehiclePower": {
+            "description": "power of a vehicle's engine",
+            "type": "power",
+            "units": {
+                "metric": ["kilowatt"],
+                "uscustomary": ["horsepower"],
+                "imperial": ["horsepower"]
+            },
+            "maxFractionDigits": 2
         }
     }
 }
