--- a/js/data/locale/zoneinfo/zonetab.json
+++ b/js/data/locale/zoneinfo/zonetab.json
@@ -284,7 +284,8 @@
     ],
     "CY": [
         "Asia/Famagusta",
-        "Asia/Nicosia"
+        "Asia/Nicosia",
+        "Europe/Nicosia"
     ],
     "CZ": [
         "Europe/Prague"
@@ -503,6 +504,7 @@
     ],
     "KI": [
         "Pacific/Enderbury",
+        "Pacific/Kanton",
         "Pacific/Kiritimati",
         "Pacific/Tarawa"
     ],
@@ -905,6 +907,7 @@
         "Pacific/Tongatapu"
     ],
     "TR": [
+        "Asia/Istanbul",
         "Europe/Istanbul",
         "Turkey"
     ],
