--- a/js/data/locale/zoneinfo/zonetab.json
+++ b/js/data/locale/zoneinfo/zonetab.json
@@ -284,8 +284,7 @@
     ],
     "CY": [
         "Asia/Famagusta",
-        "Asia/Nicosia",
-        "Europe/Nicosia"
+        "Asia/Nicosia"
     ],
     "CZ": [
         "Europe/Prague"
@@ -907,7 +906,6 @@
         "Pacific/Tongatapu"
     ],
     "TR": [
-        "Asia/Istanbul",
         "Europe/Istanbul",
         "Turkey"
     ],
