Update ctype data to cldr 40 and UCD 14

--- a/js/data/locale/ctype.json
+++ b/js/data/locale/ctype.json
@@ -67,7 +67,7 @@
     "ahom": [
         [
             71424,
-            71487
+            71503
         ]
     ],
     "albanian": [
@@ -112,6 +112,12 @@
         [
             126464,
             126719
+        ]
+    ],
+    "arabic extended-b": [
+        [
+            2160,
+            2207
         ]
     ],
     "aramaic": [
@@ -430,6 +436,12 @@
             67647
         ]
     ],
+    "cypro-minoan": [
+        [
+            77712,
+            77823
+        ]
+    ],
     "cyrillic": [
         [
             1024,
@@ -550,6 +562,12 @@
         [
             43776,
             43823
+        ]
+    ],
+    "ethiopic extended-b": [
+        [
+            124896,
+            124927
         ]
     ],
     "geometric": [
@@ -902,6 +920,12 @@
             110895
         ]
     ],
+    "kana extended-b": [
+        [
+            110576,
+            110591
+        ]
+    ],
     "kanbun": [
         [
             12688,
@@ -996,6 +1020,18 @@
         [
             43824,
             43887
+        ]
+    ],
+    "latin extended-f": [
+        [
+            67456,
+            67519
+        ]
+    ],
+    "latin extended-g": [
+        [
+            122624,
+            122879
         ]
     ],
     "lepcha": [
@@ -1302,6 +1338,12 @@
         [
             69376,
             69423
+        ]
+    ],
+    "old uyghur": [
+        [
+            69488,
+            69551
         ]
     ],
     "oldhungarian": [
@@ -1700,6 +1742,12 @@
             73727
         ]
     ],
+    "tangsa": [
+        [
+            92784,
+            92879
+        ]
+    ],
     "tangut": [
         [
             94176,
@@ -1709,7 +1757,7 @@
     "tangut supplement": [
         [
             101632,
-            101775
+            101759
         ]
     ],
     "telugu": [
@@ -1748,10 +1796,22 @@
             70879
         ]
     ],
+    "toto": [
+        [
+            123536,
+            123583
+        ]
+    ],
     "ugaritic": [
         [
             66432,
             66463
+        ]
+    ],
+    "unified canadian aboriginal syllabics extended-a": [
+        [
+            72368,
+            72383
         ]
     ],
     "vai": [
@@ -1780,6 +1840,12 @@
         [
             65040,
             65055
+        ]
+    ],
+    "vithkuqi": [
+        [
+            66928,
+            67007
         ]
     ],
     "wancho": [
@@ -1822,6 +1888,12 @@
         [
             72192,
             72271
+        ]
+    ],
+    "znamenny musical notation": [
+        [
+            118528,
+            118735
         ]
     ]
 }
