--- a/js/data/locale/tg/sysres.json
+++ b/js/data/locale/tg/sysres.json
@@ -80,38 +80,38 @@
     "finalSeparatorFull": ", ",
     "separatorShort": ", ",
     "separatorMedium": ", ",
-    "1#1 millisecond|#{num} milliseconds": "#{num} ms",
-    "1#1 second|#{num} seconds": "#{num} s",
-    "1#1 minute|#{num} minutes": "#{num} min",
-    "1#1 hour|#{num} hours": "#{num} h",
-    "1#1 day|#{num} days": "#{num} d",
-    "1#1 week|#{num} weeks": "#{num} w",
-    "1#1 month|#{num} months": "#{num} m",
-    "1#1 year|#{num} years": "#{num} y",
-    "#{num} ms": "#{num} ms",
-    "1#1 sec|#{num} sec": "#{num} s",
-    "1#1 min|#{num} min": "#{num} min",
-    "1#1 hr|#{num} hrs": "#{num} h",
-    "durationLongDays": "#{num} d",
-    "1#1 wk|#{num} wks": "#{num} w",
-    "1#1 mon|#{num} mons": "#{num} m",
-    "1#1 yr|#{num} yrs": "#{num} y",
-    "durationMediumMillis": "#{num} ms",
-    "1#1 se|#{num} sec": "#{num} s",
-    "1#1 mi|#{num} min": "#{num} min",
-    "durationMediumHours": "#{num} h",
-    "1#1 dy|#{num} dys": "#{num} d",
-    "durationMediumWeeks": "#{num} w",
-    "1#1 mo|#{num} mos": "#{num} m",
-    "durationMediumYears": "#{num} y",
-    "durationShortMillis": "#{num} ms",
-    "#{num}s": "#{num} s",
-    "durationShortMinutes": "#{num} min",
-    "#{num}h": "#{num} h",
-    "#{num}d": "#{num} d",
-    "#{num}w": "#{num} w",
-    "durationShortMonths": "#{num} m",
-    "#{num}y": "#{num} y",
+    "1#1 millisecond|#{num} milliseconds": "#{num} миллисекундҳо",
+    "1#1 second|#{num} seconds": "#{num} сония",
+    "1#1 minute|#{num} minutes": "#{num} дақиқа",
+    "1#1 hour|#{num} hours": "#{num} соат",
+    "1#1 day|#{num} days": "#{num} рӯз",
+    "1#1 week|#{num} weeks": "#{num} ҳафта",
+    "1#1 month|#{num} months": "#{num} моҳ",
+    "1#1 year|#{num} years": "#{num} сол",
+    "#{num} ms": "#{num} мил",
+    "1#1 sec|#{num} sec": "#{num} сон",
+    "1#1 min|#{num} min": "#{num} дақ",
+    "1#1 hr|#{num} hrs": "#{num} соа",
+    "durationLongDays": "#{num} рӯз",
+    "1#1 wk|#{num} wks": "#{num} ҳаф",
+    "1#1 mon|#{num} mons": "#{num} моҳ",
+    "1#1 yr|#{num} yrs": "#{num} сол",
+    "durationMediumMillis": "#{num} ми",
+    "1#1 se|#{num} sec": "#{num} со",
+    "1#1 mi|#{num} min": "#{num} да",
+    "durationMediumHours": "#{num} со",
+    "1#1 dy|#{num} dys": "#{num} рӯ",
+    "durationMediumWeeks": "#{num} ҳа",
+    "1#1 mo|#{num} mos": "#{num} мо",
+    "durationMediumYears": "#{num} со",
+    "durationShortMillis": "#{num} м",
+    "#{num}s": "#{num} с",
+    "durationShortMinutes": "#{num} д",
+    "#{num}h": "#{num} с",
+    "#{num}d": "#{num} р",
+    "#{num}w": "#{num} ҳ",
+    "durationShortMonths": "#{num} м",
+    "#{num}y": "#{num} с",
     "1#in 1 second|#in {num} seconds": "#пас аз {num} сония",
     "1#in 1 minute|#in {num} minutes": "#пас аз {num} дақиқа",
     "1#in 1 hour|#in {num} hours": "#пас аз {num} соат",
