--- a/js/data/locale/wo/sysres.json
+++ b/js/data/locale/wo/sysres.json
@@ -68,37 +68,37 @@
     "separatorShort": ", ",
     "separatorMedium": ", ",
     "1#1 millisecond|#{num} milliseconds": "#{num} ms",
-    "1#1 second|#{num} seconds": "#{num} s",
-    "1#1 minute|#{num} minutes": "#{num} min",
-    "1#1 hour|#{num} hours": "#{num} h",
-    "1#1 day|#{num} days": "#{num} d",
-    "1#1 week|#{num} weeks": "#{num} w",
-    "1#1 month|#{num} months": "#{num} m",
-    "1#1 year|#{num} years": "#{num} y",
+    "1#1 second|#{num} seconds": "#{num} saa",
+    "1#1 minute|#{num} minutes": "#{num} simili",
+    "1#1 hour|#{num} hours": "#{num} waxtu",
+    "1#1 day|#{num} days": "#{num} bés",
+    "1#1 week|#{num} weeks": "#{num} ayubés",
+    "1#1 month|#{num} months": "#{num} weer",
+    "1#1 year|#{num} years": "#{num} at",
     "#{num} ms": "#{num} ms",
-    "1#1 sec|#{num} sec": "#{num} s",
-    "1#1 min|#{num} min": "#{num} min",
-    "1#1 hr|#{num} hrs": "#{num} h",
-    "durationLongDays": "#{num} d",
-    "1#1 wk|#{num} wks": "#{num} w",
-    "1#1 mon|#{num} mons": "#{num} m",
-    "1#1 yr|#{num} yrs": "#{num} y",
+    "1#1 sec|#{num} sec": "#{num} saa",
+    "1#1 min|#{num} min": "#{num} sim",
+    "1#1 hr|#{num} hrs": "#{num} wax",
+    "durationLongDays": "#{num} bés",
+    "1#1 wk|#{num} wks": "#{num} ayu",
+    "1#1 mon|#{num} mons": "#{num} wee",
+    "1#1 yr|#{num} yrs": "#{num} at",
     "durationMediumMillis": "#{num} ms",
-    "1#1 se|#{num} sec": "#{num} s",
-    "1#1 mi|#{num} min": "#{num} min",
-    "durationMediumHours": "#{num} h",
-    "1#1 dy|#{num} dys": "#{num} d",
-    "durationMediumWeeks": "#{num} w",
-    "1#1 mo|#{num} mos": "#{num} m",
-    "durationMediumYears": "#{num} y",
+    "1#1 se|#{num} sec": "#{num} sa",
+    "1#1 mi|#{num} min": "#{num} si",
+    "durationMediumHours": "#{num} wa",
+    "1#1 dy|#{num} dys": "#{num} bé",
+    "durationMediumWeeks": "#{num} ay",
+    "1#1 mo|#{num} mos": "#{num} we",
+    "durationMediumYears": "#{num} at",
     "durationShortMillis": "#{num} ms",
-    "#{num}s": "#{num} s",
-    "durationShortMinutes": "#{num} min",
-    "#{num}h": "#{num} h",
-    "#{num}d": "#{num} d",
-    "#{num}w": "#{num} w",
-    "durationShortMonths": "#{num} m",
-    "#{num}y": "#{num} y",
+    "#{num}s": "#{num} sa",
+    "durationShortMinutes": "#{num} si",
+    "#{num}h": "#{num} wa",
+    "#{num}d": "#{num} b",
+    "#{num}w": "#{num} ay",
+    "durationShortMonths": "#{num} we",
+    "#{num}y": "#{num} at",
     "1#in 1 second|#in {num} seconds": "#fileek {num} saa",
     "1#in 1 minute|#in {num} minutes": "#fileek {num} simili",
     "1#in 1 hour|#in {num} hours": "#fileek {num} waxtu",
