--- a/js/data/locale/fa/sysres.json
+++ b/js/data/locale/fa/sysres.json
@@ -226,17 +226,17 @@
     "1#1 mon|#{num} mons": "one#{num} ماه|#{num} ماه",
     "1#1 yr|#{num} yrs": "one#{num} سال|#{num} سال",
     "durationMediumMillis": "one#{num}ms|#{num}ms",
-    "1#1 se|#{num} sec": "one#{num}s|#{num}s",
-    "1#1 mi|#{num} min": "one#{num}m|#{num}m",
-    "durationMediumHours": "one#{num}h|#{num}h",
+    "1#1 se|#{num} sec": "one#{num} ث|#{num} ث",
+    "1#1 mi|#{num} min": "one#{num} دقیقه|#{num} دقیقه",
+    "durationMediumHours": "one#{num} ساعت|#{num} ساعت",
     "1#1 dy|#{num} dys": "one#{num} روز|#{num} روز",
     "durationMediumWeeks": "one#{num} هفته|#{num} هفته",
     "1#1 mo|#{num} mos": "one#{num} ماه|#{num} ماه",
     "durationMediumYears": "one#{num} سال|#{num} سال",
     "durationShortMillis": "one#{num}ms|#{num}ms",
-    "#{num}s": "one#{num}s|#{num}s",
-    "durationShortMinutes": "one#{num}m|#{num}m",
-    "#{num}h": "one#{num}h|#{num}h",
+    "#{num}s": "one#{num} ث|#{num} ث",
+    "durationShortMinutes": "one#{num} دقیقه|#{num} دقیقه",
+    "#{num}h": "one#{num} ساعت|#{num} ساعت",
     "#{num}d": "one#{num} روز|#{num} روز",
     "#{num}w": "one#{num} هفته|#{num} هفته",
     "durationShortMonths": "one#{num} ماه|#{num} ماه",
