--- a/js/data/locale/zu/sysres.json
+++ b/js/data/locale/zu/sysres.json
@@ -107,7 +107,7 @@
     "1#1 day|#{num} days": "one#{num} usuku|#{num} izinsuku",
     "1#1 week|#{num} weeks": "one#{num} iviki|#{num} amaviki",
     "1#1 month|#{num} months": "one#{num} inyanga|#{num} izinyanga",
-    "1#1 year|#{num} years": "one#{num} y|#{num} y",
+    "1#1 year|#{num} years": "one#{num} unyaka|#{num} iminyaka",
     "#{num} ms": "one#{num} ms|#{num} ms",
     "1#1 sec|#{num} sec": "one#{num} sekhondi|#{num} sec",
     "1#1 min|#{num} min": "one#{num} iminithi|#{num} iminithi",
@@ -115,23 +115,23 @@
     "durationLongDays": "one#{num} usuku|#{num} izinsuku",
     "1#1 wk|#{num} wks": "one#{num} viki|#{num} amaviki",
     "1#1 mon|#{num} mons": "one#{num} nyanga|#{num} izinyanga",
-    "1#1 yr|#{num} yrs": "one#{num} y|#{num} yrs",
+    "1#1 yr|#{num} yrs": "one#{num} nyk|#{num} nyk",
     "durationMediumMillis": "one#{num} ms|#{num} ms",
     "1#1 se|#{num} sec": "one#{num} s|#{num} s",
     "1#1 mi|#{num} min": "one#{num} umzuzu|#{num} umzuzu",
     "durationMediumHours": "one#{num} hora|#{num} hora",
-    "1#1 dy|#{num} dys": "one#{num}|#{num} suku",
-    "durationMediumWeeks": "one#{num} w|#{num} w",
-    "1#1 mo|#{num} mos": "one#{num} m|#{num} m",
-    "durationMediumYears": "one#{num} y|#{num} y",
+    "1#1 dy|#{num} dys": "one#{num} suku|#{num} suku",
+    "durationMediumWeeks": "one#{num} v|#{num} v",
+    "1#1 mo|#{num} mos": "one#{num} ng|#{num} ng",
+    "durationMediumYears": "one#{num} nk|#{num} nk",
     "durationShortMillis": "one#{num} ms|#{num} ms",
     "#{num}s": "one#{num} s|#{num} s",
     "durationShortMinutes": "one#{num} umzuzu|#{num} umzuzu",
     "#{num}h": "one#{num} hora|#{num} hora",
-    "#{num}d": "one#{num}|#{num} suku",
-    "#{num}w": "one#{num} w|#{num} w",
-    "durationShortMonths": "one#{num} m|#{num} m",
-    "#{num}y": "one#{num} y|#{num} y",
+    "#{num}d": "one#{num} suku|#{num} suku",
+    "#{num}w": "one#{num} v|#{num} v",
+    "durationShortMonths": "one#{num} ng|#{num} ng",
+    "#{num}y": "one#{num} nk|#{num} nk",
     "1#in 1 second|#in {num} seconds": "one#kusekhondi elingu-{num} elizayo|#kumasekhondi angu-{num} ezayo",
     "1#in 1 minute|#in {num} minutes": "one#kuminithi elingu-{num} elizayo|#kumaminithi angu-{num} ezayo",
     "1#in 1 hour|#in {num} hours": "one#ehoreni elingu-{num} elizayo|#emahoreni angu-{num} ezayo",
